# pre-gamos.ai

./: .gitignore  README.md  app.py  constants.py  helpers.py  papers.json  pyproject.toml  readability.py  requirements.txt
helpers/: __init__.py  constants.py  helpers.py  readability.py
