[tool.poetry]
name = "pre-gamos-ai"
version = "1.0.1"
description = ""
authors = ["Nico Colic <nicola.colic@supsi.ch>"]
readme = "README.md"
packages = [{include = "pre_gamos"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
streamlit = "^1.25.0"
st-annotated-text = "^4.0.0"
biopython = "^1.81"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
